# CrewMind

./: README.md  app.py  clean_app.py  daily_plan.md  pyproject.toml  requirements.txt  test_api_key.py
src/crewmind/: crew.py  main.py
src/crewmind/config/: agents.yaml  tasks.yaml
